...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".locationreminders.ReminderDescriptionActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:hint="@string/saved_location_title"
            android:text="@{reminderDataItem.title}"
            android:textColor="@color/black"
...
